[metadata]
name = github-pulls
version = 1.0.1
description = Parse github repositories for opened pull requests & issues.
url = https://github.com/Philippe-Cholet/github-pulls
author = Philippe Cholet
license = MIT
keywords =
    github
    issues
    pulls
    aiohttp
    asyncio
    beautifulsoup4
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7

[options]
python_requires = >= 3.7
py_modules = github_pulls
install_requires =
    aiohttp
    beautifulsoup4

[options.entry_points]
console_scripts =
    github-pulls = github_pulls:main
