[metadata]
name = github-pulls
version = github_pulls: __VERSION__
description = Parse github repositories for opened pull requests & issues.
url = https://github.com/Philippe-Cholet/github-pulls
author = Philippe Cholet
license = MIT
keywords =
    github
    issues
    pulls
    aiohttp
    asyncio
    beautifulsoup4
    click
    lxml
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >= 3.7
py_modules = github_pulls
install_requires =
    aiohttp
    beautifulsoup4
    click
    lxml

[options.entry_points]
console_scripts =
    github-pulls = github_pulls:cli

[mypy]
ignore_missing_imports = True
pretty = True
show_error_codes = True
